// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-title Should render label with args { isLegend: true, identifier: 'identifier' } 1`] = `
<mg-input-title>
  <!---->
  <legend class="mg-input-title">
    mg-input-title
  </legend>
</mg-input-title>
`;

exports[`mg-input-title Should render label with args { required: false, identifier: 'identifier' } 1`] = `
<mg-input-title>
  <!---->
  <label class="mg-input-title" htmlfor="identifier">
    mg-input-title
  </label>
</mg-input-title>
`;

exports[`mg-input-title Should render label with args { required: true, identifier: 'identifier' } 1`] = `
<mg-input-title>
  <!---->
  <label class="mg-input-title" htmlfor="identifier">
    mg-input-title
    <span class="is-asterisk">
      *
    </span>
  </label>
</mg-input-title>
`;
